--- a/index.css
+++ b/index.css
@@ -41,3 +41,19 @@ button {
   font-size: 20px;
   font-family: 'Rubik', sans-serif;
 }
+
+#shopping-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-content: stretch;
+}
+
+.shopping-items {
+  list-style-type: none;
+  text-align: center;
+  background-color: white;
+  border-radius: 8px;
+  padding: 15px;
+  margin: 3px;
+}
