--- a/index.css
+++ b/index.css
@@ -46,14 +46,18 @@ button {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  align-content: stretch;
+  gap: 10px;
+  padding: 0;
 }
 
 .shopping-items {
   list-style-type: none;
   text-align: center;
-  background-color: white;
+  background-color: #FFFDF8;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   padding: 15px;
-  margin: 3px;
+  font-size: 20px;
+  font-family: 'Rubik', sans-serif;
+  flex-grow: 1;
 }
