--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   font-family: 'Rubik', sans-serif;
   background-color: #EEF0F4;
+  color: #432000;
 }
 
 #add-items {
@@ -64,8 +65,10 @@ li {
 
 li:hover {
   background-color: #FFECC7;
+  cursor: pointer;
 }
 
 button:hover {
   background-color: #432000;
+  cursor: pointer;
 }
